<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_find"
        android:icon="@mipmap/baseline_fiber_new_black_24"
        android:title="@string/menu_findfriend"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_like"
        android:icon="@mipmap/baseline_people_black_24"
        android:title="@string/menu_like"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_friend"
        android:icon="@mipmap/baseline_notifications_active_black_24"
        android:title="@string/menu_friend"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_profile"
        android:icon="@mipmap/baseline_menu_black_24"
        android:title="@string/menu_profile"
        app:showAsAction="never" />

</menu>