<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".loginandregister.addinfo.AddInfoFragment">

    <include
        android:id="@+id/toobarAddInfo"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgAvatarA"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add_a_photo_black_24dp"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

        </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:counterMaxLength="25">

            <EditText
                android:id="@+id/edtNameA"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edt_text"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ngay_sinh"
            android:textColor="@color/colorTextLight"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorTextDark" />

        <TextView
            android:id="@+id/edtNgaySinhA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_birthday"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/what_is_your_birthday"
            android:textColor="@color/colorTextLight" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gioi_tinh"
            android:textColor="@color/colorTextLight"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorTextDark" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbnNam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/add_nam"
                android:textColor="@color/colorTextLight" />

            <RadioButton
                android:id="@+id/rbnNu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_nu"
                android:textColor="@color/colorTextLight" />

        </RadioGroup>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_buttom"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/colorTextLight" />

    </LinearLayout>
</LinearLayout>