<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/toobarRegister"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtErrorR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextError"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="25">

            <EditText
                android:id="@+id/edtEmailR"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edt_text"
                android:drawableLeft="@drawable/baseline_email_black_18dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="25"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edtPasswordR"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edt_text"
                android:drawableLeft="@drawable/baseline_fingerprint_black_18"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp"
                tools:ignore="TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="25"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edtRePasswordR"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edt_text"
                android:drawableLeft="@drawable/baseline_fingerprint_black_18"
                android:hint="@string/re_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp"
                tools:ignore="TextFields" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnRegisterR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_buttom"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/colorTextLight" />

    </LinearLayout>


</LinearLayout>